Diagrama atualizado e modificacoes de metodos inuteis